# mint-ai

./: .dockerignore  .gitignore  LICENSE  README.en.md  README.md  main.py  pyproject.toml
.github/workflows/: docker-image.yml
backend/: Dockerfile  README.md  go.mod  go.sum
backend/api/: api.go
backend/api/upload/: upload.go
backend/api/user/: user.go
backend/api/wxgate/: wxgate.go
backend/cmd/envinit/: main.go
backend/cmd/webserver/: main.go
backend/docs/: 设计文档.md
backend/internal/config/: config.go
backend/internal/consts/: consts.go  email.go  limit.go  pay.go  user.go  wechat.go
backend/internal/errcode/: common.go  func.go  lang.go  notifier.go  upload.go  user.go
backend/internal/middleware/: auth.go  middleware.go  prepare.go  response.go  timeout.go  traceid.go
backend/util/: download.go  download_test.go  email.go  exec.go  exec_test.go  file.go  file_test.go  hash.go  hash_test.go  html.go  rand.go  rand_test.go  rgb.go  rgb_test.go  srt.go  srt_test.go  version.go
docker/: .env.example  Dockerfile  docker-compose.yaml  docker-compose.yml
docker/html/: commit_hash.txt  index.html
docs/: 设计文档.md
frontend/: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.cjs  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.jsx  App.tsx  index.css  main.tsx  typings.d.ts
src/: app.py
src/api/v1/: router.py  (+1 more)
src/core/: config.py  logger.py
src/schemas/: common.py  tasks.py
src/services/: capcut_mate_client.py  ffmpeg_ops.py  task_service.py
tests/api/: test_tasks.py
(+102 files in other folders)
